Modules/Service/Jenkins/aws_security_groups.tf
resource "aws_security_group" "instance" {
  name = "terraform-jenkins-instance"
  vpc_id = "${data.terraform_remote_state.vpc.vpc_id}"

}

resource "aws_security_group" "elb" {
  name = "terraform-jenkins-elb"
  vpc_id = "${data.terraform_remote_state.vpc.vpc_id}"
}
